--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "bulma": "^0.9.0",
     "gatsby": "^2.27.4",
     "gatsby-image": "^2.3.5",
