--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -53,6 +53,13 @@ collections:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
+      - file: "src/pages/checkout/index.md"
+          label: "Checkout"
+          name: "checkout"
+          fields:
+            - {label: "Template Key", name: "templateKey", widget: "hidden", default: "checkout-page"}
+            - {label: "Title", name: "title", widget: "string"}
+            - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/products/index.md"
         label: "Products Page"
         name: "products"
