--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.0.0",
+    "gatsby-plugin-root-import": "^2.0.5",
     "prettier": "^2.0.5"
   }
 }
