--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clover-ecomm-sdk": "^1.0.0",
     "gatsby": "^2.27.4",
     "gatsby-image": "^2.3.5",
+    "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-netlify": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.2.5",
     "gatsby-plugin-purgecss": "^5.0.0",
