--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,17 @@
     "compilerOptions": {
         "allowJs": true,
         "allowSyntheticDefaultImports": true,
-        "baseUrl": "./src",
+        "baseUrl": ".",
+        "paths": {
+            "~components/*": ["src/components/*"],
+            "~interfaces/*": ["src/interfaces/*"],
+            "~hooks/*": ["src/hooks/*"],
+            "~img/*": ["src/img/*"],
+            "~pages/*": ["src/pages/*"],
+            "~styles/*": ["src/styles/*"],
+            "~templates/*": ["src/templates/*"],
+            "~utils/*": ["src/utils/*"],
+        },
         "jsx": "react",
         "lib": ["dom", "esnext", "es2015", "es2016", "es2017"],
         "moduleResolution": "node",
