changed jsx to tsx.  Replaced relative paths with absolute import paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
       "sourceMap": true,
       "strict": true,
       "target": "es2017",
-      "lib": ["es2017"],
+      "lib": ["es5", "es6", "es2017", "dom"],
         "baseUrl": ".",
         "paths": {
             "~components/*": ["src/components/*"],
