--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
+    "showdown": "^1.9.1",
     "typescript": "^4.1.2",
     "uuid": "^7.0.0"
   },
