--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-transformer-json": "^2.8.0",
     "gatsby-transformer-remark": "^2.7.5",
     "gatsby-transformer-sharp": "^2.4.7",
+    "glob": "^7.1.6",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms-app": "^2.9.6",
